testsuite/tests/grammar/invalid_lexers/pattern_8.lkt
import common

lexer foo_lexer {
    val pat: Int = p"example"
}
